@@ -1,8 +1,8 @@
 {
-  "timestamp" : "2023-09-24T16:15:54Z",
+  "timestamp" : "2023-09-25T01:00:49Z",
   "count_outdated" : 849,
   "uniques_outdated" : 499,
-  "count" : 871,
+  "count" : 872,
   "uniques" : 513,
   "clones" : [
     {
@@ -97,9 +97,9 @@
     },
     {
       "timestamp": "2023-09-24T00:00:00Z",
-      "count": 2,
-      "count_minmax": [ 1, 2 ],
-      "count_decinc": [ 0, 2 ],
+      "count": 3,
+      "count_minmax": [ 1, 3 ],
+      "count_decinc": [ 0, 3 ],
       "uniques": 1,
       "uniques_minmax": [ 1, 1 ],
       "uniques_decinc": [ 0, 1 ]
